Port to a recent version of autoconf.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408115

--- a/mpqc/bin/sc-config.in
+++ b/mpqc/bin/sc-config.in
@@ -19,6 +19,7 @@ f77="@F77@"
 version="@SC_VERSION@"
 soversion="@SC_SO_VERSION@"
 buildid="@BUILDID@"
+datarootdir=@datarootdir@
 scdatadir=@scdatadir@
 enableshared=@ENABLESHARED@
 
