--- a/mpqc/src/bin/mpqc/mpqcrun.in
+++ b/mpqc/src/bin/mpqc/mpqcrun.in
@@ -5,6 +5,7 @@
 $prefix = '@prefix@';
 $exec_prefix = "@exec_prefix@";
 $bindir = "@bindir@";
+$datarootdir = "@datarootdir@";
 $scdatadir = "@scdatadir@";
 
 use POSIX;
