Switch to the new, exception-safe timing methodology.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408125

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -925,6 +925,13 @@ AC_LANG_CPLUSPLUS
 AC_TRY_LINK(,[double *restrict x=0;],AC_DEFINE(CXX_RESTRICT))
 AC_LANG_RESTORE
 
+dnl  ----------- check for C++ deprecated attribute ---------------
+
+AC_LANG_SAVE
+AC_LANG_CPLUSPLUS
+AC_TRY_LINK(,[void f() __attribute__((deprecated));],AC_DEFINE(CXX_DEPRECATED))
+AC_LANG_RESTORE
+
 dnl ---------- Checks for C++ header files. -----------
 
 AC_LANG_SAVE
