1) Can run some MP2-R12 calculations when there are no virtual orbitals. 2) Approximation C calculations never use commutator integrals now. 3) GenG12 integrals support added 3) G12NC integrals support added (not debugged yet).
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408251

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1688,6 +1688,42 @@ AC_CHECK_HEADERS(libint2/libint2.h,
      AC_MSG_RESULT([yes])],
     [AC_MSG_RESULT([no])]
     )
+  if test X$HAVE_LIBINT2_G12 = Xyes; then
+    AC_MSG_CHECKING([if libint2 can compute T1G12 commutators])
+    AC_COMPILE_IFELSE(
+      AC_LANG_PROGRAM(
+        [[#include <libint2/libint2.h>
+          #if LIBINT2_SUPPORT_G12 && LIBINT2_SUPPORT_T1G12
+          void libint2_support_t1g12() {}
+          #endif
+        ]],
+        [[
+          libint2_support_t1g12();
+        ]]
+      ),
+      [HAVE_LIBINT2_G12_T1G12=yes
+       AC_SUBST(HAVE_LIBINT2_G12_T1G12)
+       AC_MSG_RESULT([yes])],
+      [AC_MSG_RESULT([no])]
+    )
+  fi
+  AC_MSG_CHECKING([if libint2 can compute general G12])
+  AC_COMPILE_IFELSE(
+    AC_LANG_PROGRAM(
+      [[#include <libint2/libint2.h>
+        #if LIBINT2_SUPPORT_GENG12
+        void libint2_support_geng12() {}
+        #endif
+      ]],
+      [[
+        libint2_support_geng12();
+      ]]
+      ),
+    [HAVE_LIBINT2_GENG12=yes
+     AC_SUBST(HAVE_LIBINT2_GENG12)
+     AC_MSG_RESULT([yes])],
+    [AC_MSG_RESULT([no])]
+    )
   )
 AC_LANG_RESTORE
 
