--- a/mpqc/lib/LocalMakefile.in
+++ b/mpqc/lib/LocalMakefile.in
@@ -132,6 +132,8 @@ HAVE_LIBDERIV = @HAVE_LIBDERIV@
 HAVE_LIBINT2 = @HAVE_LIBINT2@
 HAVE_LIBINT2_ERI = @HAVE_LIBINT2_ERI@
 HAVE_LIBINT2_G12 = @HAVE_LIBINT2_G12@
+HAVE_LIBINT2_G12_T1G12 = @HAVE_LIBINT2_G12_T1G12@
+HAVE_LIBINT2_GENG12 = @HAVE_LIBINT2_GENG12@
 
 SYSLIBS = @LIBS@ @FLIBS@
 
