--- a/mpqc/src/lib/chemistry/qc/basis/Makefile
+++ b/mpqc/src/lib/chemistry/qc/basis/Makefile
@@ -43,14 +43,14 @@ CXXSRC = gaussbas.cc gaussshell.cc files.cc \
          symmint.cc tbint.cc dercent.cc \
          sobasis.cc sointegral.cc extent.cc orthog.cc \
          gpetite.cc distshpair.cc intparams.cc intdescr.cc \
-         uncontract.cc split.cc
+         uncontract.cc split.cc inttypedescr.cc
 
 INC = basis.h gaussbas.h guassshell.h files.h \
       cartiter.h transform.h shellrot.h \
       integral.h obint.h petite.h symmint.h tbint.h dercent.h \
       sobasis.h sointegral.h \
       orthog.h gpetite.h distshpair.h intparams.h intdescr.h \
-      uncontract.h
+      uncontract.h inttypedescr.h
 
 TESTSRC = btest.cc
 TESTOBJ = $(TESTSRC:%.cc=%.$(OBJSUF))
