It is now possible to specify the sender in the recvt MessageGrp members. Information about received messages can now be accessed. The StateRecv and StateSend classes now use sendt/recvt to make it possbile to receive streams from different threads on the same node. Instead of porting these changes to ShmMessageGrp, ShmMessageGrp has been removed, since it is not tested anymore and because MPIMessageGrp can fulfill its job just as well.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408262

--- a/mpqc/src/lib/util/group/Makefile
+++ b/mpqc/src/lib/util/group/Makefile
@@ -32,19 +32,19 @@ endif
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 
 REQUIREDCXXSRC = mstate.cc \
-         message.cc messimpl.cc messproc.cc messint.cc \
+         message.cc messimpl.cc messproc.cc \
          reduce.cc topology.cc hcube.cc \
          rnglock.cc memory.cc memmsg.cc pool.cc \
          memamsg.cc memproc.cc \
          pregtime.cc thread.cc memiter.cc memrdma.cc
 
-OPTIONALCXXSRC = messshm.cc messmpi.cc memshm.cc \
+OPTIONALCXXSRC = messmpi.cc memshm.cc \
                  memmtmpi.cc
 
 CXXSRC := $(REQUIREDCXXSRC)
 
 ifeq ($(HAVE_SYSV_IPC),yes)
-  CXXSRC += messshm.cc memshm.cc globcnt.cc
+  CXXSRC += memshm.cc globcnt.cc
 endif
 
 ifeq ($(HAVE_MPI),yes)
