--- a/mpqc/src/lib/chemistry/qc/libint2/Makefile
+++ b/mpqc/src/lib/chemistry/qc/libint2/Makefile
@@ -39,7 +39,7 @@ BIN_OR_LIB = LIB
 
 TESTCSRC = libint2test.cc
 
-CXXSRC = libint2.cc obintlibint2.cc tbintlibint2.cc tform.cc int2e.cc storage.cc \
+CXXSRC = libint2.cc obintlibint2.cc tbintlibint2.cc tform.cc int2e.cc bounds.cc storage.cc \
 	primpairs.cc shellpairs.cc permute2e.cc int1e.cc overlap.cc kinetic.cc nuclear.cc \
 	hcore.cc obosrr.cc edipole.cc equadrupole.cc
 ifeq ($(HAVE_LIBINT2_ERI),yes)
