1) Introduced R12Technology 2) Moved most of MBPT2_R12 class to R12Technology and R12IntEvalInfo 3) R12IntEvalInfo now must use delayed initialization because it is constructed in MBPT2_R12(KeyVal).
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408326

--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -58,7 +58,7 @@ CXXSRCS = mbptr12.cc \
   ebc_contribs.cc gbc_contribs.cc approxB.cc Xgen.cc FxFgen.cc \
   creator.cc approxC.cc approxApp.cc ansatz.cc \
   mp2r12_energy_util.cc compute_VXB_a.cc compute_VXB_a_vbsneqobs.cc \
-  gaussianfit.cc
+  gaussianfit.cc r12technology.cc
 
 ifeq ($(HAVE_MPIIO),yes)
   CXXSRCS += r12ia_mpiiofile.cc
