Can compute CCSD-PT2R12 using only 1 "extra" term: T2.Vab .
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408344

--- a/mpqc/src/lib/chemistry/qc/psi/Makefile
+++ b/mpqc/src/lib/chemistry/qc/psi/Makefile
@@ -8,7 +8,7 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 TARGET_TO_MAKE = libSCpsi
 BIN_OR_LIB = LIB
 
-SRCS = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc
+SRCS = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc psicc.cc
 CSRCS = 
 
 psitest.testrun: DO_TESTRUN=no
