--- a/mpqc/src/lib/scconfig.h.in
+++ b/mpqc/src/lib/scconfig.h.in
@@ -247,6 +247,12 @@
 /* Define if IntegralLibint2 can be compiled.  */
 #undef HAVE_INTEGRALLIBINT2
 
+/* Define if you have the libpsio header file and library.  */
+#undef HAVE_LIBPSIO
+
+/* Define if Psi-MPQC interface can be compiled.  */
+#undef HAVE_PSIMPQCIFACE
+
 /* Define if your MPI implementation has MPI-IO functions */
 #undef HAVE_MPIIO
 
