Fixed a minor typo.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408371

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1815,7 +1815,7 @@ fi
 
 dnl ----------- make sure we have everything for MPQC-Psi interface ----------
 
-if test ! X$HAVE_LIBPSIO = Xno; then
+if test X$HAVE_LIBPSIO = Xno; then
   EXCLUDED_DIRS="-x SRC_LIB_CHEMISTRY_QC_PSI $EXCLUDED_DIRS"
   AC_DEFINE(HAVE_PSIMPQCIFACE)
 fi
