adde HAVE_LIBCHKPT to scconfig.h.in
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408376

--- a/mpqc/src/lib/scconfig.h.in
+++ b/mpqc/src/lib/scconfig.h.in
@@ -250,6 +250,9 @@
 /* Define if you have the libpsio header file and library.  */
 #undef HAVE_LIBPSIO
 
+/* Define if you have the libchkpt header file and library.  */
+#undef HAVE_LIBCHKPT
+
 /* Define if Psi-MPQC interface can be compiled.  */
 #undef HAVE_PSIMPQCIFACE
 
