--- a/mpqc/src/lib/chemistry/qc/psi/Makefile
+++ b/mpqc/src/lib/chemistry/qc/psi/Makefile
@@ -8,18 +8,21 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 TARGET_TO_MAKE = libSCpsi
 BIN_OR_LIB = LIB
 
-SRCS = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc psicc.cc psicc_pt2r12.cc
-CSRCS = 
+CXXSRC = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc psicc.cc psicc_pt2r12.cc
+CSRC = 
 INC = psiwfn.h psiinput.h psiexenv.h psifile11.h psicc.h psicc_pt2r12.h
 
 psitest.testrun: DO_TESTRUN=no
 
-TESTSRCS = psitest.cc
-
+TESTSRC = psitest.cc
 TESTPROGS = psitest
 
-LIBOBJ = $(SRCS:%.cc=%.$(OBJSUF))
-LIBOBJ += $(CSRCS:%.c=%.$(OBJSUF))
+LIBSRC = $(CXXSRC) $(CSRC)
+LIBOBJ = $(LIBSRC:%.c=%.$(OBJSUF))
+LIBOBJ := $(LIBOBJ:%.cc=%.$(OBJSUF))
+
+DISTFILES = $(TESTSRC) $(INC) Makefile LIBS.h
+DEPENDINCLUDE = $(INC) $(GENINC) $(SGENINC)
 
 LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
 
