1) ROHF-based MP2-R12 code seems to work. 2) Generalization to ROHF references cleaned up some sections of the code (esp. energy evaluation) dramatically. 3) I decided to abandon stdapprox A. The code with throw for now, but need more thorough cleanup.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%408423

--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -58,7 +58,9 @@ CXXSRCS = mbptr12.cc \
   ebc_contribs.cc gbc_contribs.cc approxB.cc Xgen.cc FxFgen.cc \
   creator.cc approxC.cc approxApp.cc ansatz.cc \
   mp2r12_energy_util.cc compute_VXB_a.cc compute_VXB_a_vbsneqobs.cc \
-  gaussianfit.cc r12technology.cc twobody_intermeds.cc
+  gaussianfit.cc r12technology.cc twobody_intermeds.cc \
+  singles_emp2.cc bc_contrib.cc blas.cc
+  
 INC = r12ia_memgrp.h \
 ansatz.h                        r12ia_mpiiofile.h \
 r12ia_node0file.h compute_tbint_tensor.h r12int_eval.h \
